--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="clearfix"></div>
             
             <div class="author-box">
-                <img src="author.jpg" alt="Author photo">
-                <p class="author-text">Jackson Gonzalez</p>
+                <img src="#" alt="Author photo">
+                <p class="author-text">Franklyn Rodriguz</p>
             </div>
             
         </div>
